send rematch decision to the server